...
        allertController.modalTransitionStyle = .crossDissolve

        switch status {
        case .allSave:
            currentView.present(allertController, animated: true)
            allertController.present(type: .oneButton,
                                     title: "Сохранено",
                                     message: "Изменения успешно сохранены",
                                     imageName: "saveDone",
                                     colorOne: .systemCyan,
                                     colorTwo: nil,
                                     buttonText: "Ок",
                                     buttonTextTwo: nil) { _ in
                self.presenter?.didDeleteToDo()
            }
        case .delete:
            currentView.present(allertController, animated: true)
            allertController.present(
                type: .twoButtons,
                title: "Удалить",
                message: "Вы действительно хотите удалить эту задачу?",
                imageName: "deleteToDo",
                colorOne: .systemCyan,
                colorTwo: .systemRed,
                buttonText: "Отмена",
                buttonTextTwo: "Да") { state in
...
