...
        guard let todayToDosCount = self.storage?.fetchToDosCount(with: .today),
              let tommorowToDosCount = self.storage?.fetchToDosCount(with: .tommorow),
              let overdueToDosCount = self.storage?.fetchToDosCount(with: .overdue),
              let doneToDosCount =  self.storage?.fetchToDosCount(with: .done) else { return }

        let toDosInfo = [
            [String(todayToDosCount), "Сегодня"],
            [String(overdueToDosCount), "Просрочено"],
            [String(tommorowToDosCount), "Завтра"],
            [String(doneToDosCount), "Завершено"]
        ]
        self.presenter?.didRetriveToDosCount(toDosInfo)
    }
...
